<resources>
    <string name="app_name">ExamenUnidad1_Robles</string>


    <string name="title_activity_principal">Menu Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">¿Hola?</string>

    <string name="menu_home">► Canjea tus Vea Coins ◄</string>
    <string name="menu_gallery"> Gana con la caracola magica </string>
    <string name="menu_slideshow"> Mis puntos </string>
    <string name="menu_tools"> Baño Gratis </string>
    <string name="menu_share">Nuestras Tiendas</string>
    <string name="menu_send">Cerrar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
